[package]
edition = "2021"
name = "pound_fs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.18", features = ["cargo"]}
env_logger = "0.9.0"
fuser = "0.11"
libc = "0.2.126"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.6.5"